--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "object.values": "^1.1.1",
     "prop-types": "^15.7.2",
     "react-is": "^16.13.1",
-    "react-test-renderer": "^16.0.0-0",
+    "react-test-renderer": "^17.0.0",
     "semver": "^5.7.0"
   },
   "peerDependencies": {
     "enzyme": "^3.0.0",
-    "react": "^16.0.0-0",
-    "react-dom": "^16.0.0-0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
